# horizon-overrides-plugin

./: .gitignore  README.rst  setup.cfg
horizon_overrides/: overrides.py
