[metadata]
name = horizon_api_mask 
summary = OpenStack Dashboard OVERRIDES - support for more than one customization_module
description-file =
    README.rst
author = Michael Kuty
author-email = mail@majklk.cz
home-page = https://github.com/michaelkuty/horizon-overrides-plugin.git
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: OpenStack
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Topic :: Internet :: WWW/HTTP

[files]
packages =
    horizon_overrides